[gd_scene load_steps=39 format=2]

[ext_resource path="res://PixelOperatorHB.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Menu.gd" type="Script" id=2]
[ext_resource path="res://Music/Menu.ogg" type="AudioStream" id=3]
[ext_resource path="res://rank.tres" type="SpriteFrames" id=4]
[ext_resource path="res://rank_.tres" type="SpriteFrames" id=5]
[ext_resource path="res://BG.png" type="Texture" id=6]
[ext_resource path="res://Cursor.png" type="Texture" id=7]
[ext_resource path="res://Buttons.tres" type="Theme" id=8]
[ext_resource path="res://Tree1.png" type="Texture" id=9]
[ext_resource path="res://Tree2.png" type="Texture" id=10]
[ext_resource path="res://Hslider.tres" type="Theme" id=11]
[ext_resource path="res://Panel.tres" type="Theme" id=12]
[ext_resource path="res://Ranks/pot1.png" type="Texture" id=19]
[ext_resource path="res://Ranks/pot2.png" type="Texture" id=20]
[ext_resource path="res://dogsleep2.png" type="Texture" id=21]
[ext_resource path="res://dogsleep.png" type="Texture" id=22]
[ext_resource path="res://doggo_2.png" type="Texture" id=23]
[ext_resource path="res://doggo_1.png" type="Texture" id=24]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 0.396078, 0.552941, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.305882, 0.364706, 0.415686, 1 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 1.0
} ]

[sub_resource type="DynamicFont" id=13]
size = 90
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=14]
size = 40
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=15]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="CanvasItemMaterial" id=18]
render_priority = -1

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "default",
"speed": 1.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 23 ) ],
"loop": true,
"name": "awake",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 0.2
} ]

[node name="Menu" type="Node2D"]
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 480.0
margin_bottom = 576.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 1440.0
margin_top = 32.0
margin_right = 1888.0
margin_bottom = 576.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="."]
margin_left = 704.0
margin_top = 32.0
margin_right = 1216.0
margin_bottom = 96.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="."]
margin_left = 768.0
margin_top = 128.0
margin_right = 1184.0
margin_bottom = 192.0
theme = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EXIT" type="Button" parent="."]
margin_left = 1760.0
margin_top = 672.0
margin_right = 1871.0
margin_bottom = 720.0
theme = ExtResource( 8 )
text = " Exit "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="Button" parent="."]
margin_left = 800.0
margin_top = 136.0
margin_right = 1152.0
margin_bottom = 184.0
theme = ExtResource( 8 )
text = "Fullscreen [ ]"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 64.0
margin_top = 224.0
margin_right = 544.0
margin_bottom = 288.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HBoxContainer"]
margin_right = 357.0
margin_bottom = 64.0
theme = ExtResource( 8 )
text = "       Go Fight!       "

[node name="LookForEnemy" type="ProgressBar" parent="."]
margin_left = 64.0
margin_top = 320.0
margin_right = 416.0
margin_bottom = 352.0
theme = SubResource( 1 )
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Research" type="Button" parent="."]
margin_left = 1472.0
margin_top = 160.0
margin_right = 1856.0
margin_bottom = 227.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 4 )
text = "RESEARCH"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 1504.0
margin_top = 256.0
margin_right = 1824.0
margin_bottom = 352.0
custom_fonts/font = SubResource( 5 )
text = "Cost: 500 "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabP" type="Label" parent="."]
margin_left = 1440.0
margin_top = 64.0
margin_right = 1760.0
margin_bottom = 160.0
custom_fonts/font = SubResource( 6 )
text = "Lab Points"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResAction" type="Label" parent="."]
margin_left = 800.0
margin_top = 224.0
margin_right = 1152.0
margin_bottom = 288.0
custom_fonts/font = SubResource( 7 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RP 50" type="Button" parent="."]
visible = false
margin_left = 1504.0
margin_top = 1184.0
margin_right = 1664.0
margin_bottom = 1248.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 8 )
text = "50 rp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LP 50" type="Button" parent="."]
visible = false
margin_left = 2240.0
margin_top = 448.0
margin_right = 2493.0
margin_bottom = 512.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 9 )
text = "one million lp"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
autoplay = true
bus = "Music"

[node name="Rank2" type="AnimatedSprite" parent="."]
position = Vector2( 96, 128 )
scale = Vector2( 10.1818, 10.1818 )
frames = ExtResource( 5 )
animation = "Legend"
frame = 1
playing = true

[node name="Rank" type="Label" parent="."]
margin_left = 192.0
margin_top = 128.0
margin_right = 416.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 10 )
text = "RANK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RankName" type="Label" parent="Rank"]
margin_top = -64.0
margin_right = 384.0
custom_fonts/font = SubResource( 11 )
text = "LEGEND VII"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pot" type="AnimatedSprite" parent="."]
position = Vector2( 1824, 96 )
scale = Vector2( 10.7917, 10.25 )
frames = SubResource( 12 )
frame = 1
playing = true

[node name="CanvasModulate" type="CanvasModulate" parent="."]
z_index = -2

[node name="Title" type="Label" parent="."]
margin_left = 480.0
margin_top = 256.0
margin_right = 1524.0
margin_bottom = 480.0
custom_fonts/font = SubResource( 13 )
text = "Doggo Street Fights"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title"]
margin_left = 384.0
margin_top = 160.0
margin_right = 675.0
margin_bottom = 221.0
custom_fonts/font = SubResource( 14 )
text = "Ver. 0.2.0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="."]
margin_left = 1536.0
margin_top = 448.0
margin_right = 1855.0
margin_bottom = 499.0
custom_fonts/font = SubResource( 15 )
text = "HP 000"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Power" type="Label" parent="."]
margin_left = 1536.0
margin_top = 480.0
margin_right = 1856.0
margin_bottom = 531.0
custom_fonts/font = SubResource( 15 )
text = "Power 000"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy" type="Label" parent="."]
margin_left = 1536.0
margin_top = 512.0
margin_right = 1856.0
margin_bottom = 563.0
custom_fonts/font = SubResource( 15 )
text = "Energy 000"
align = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="."]
margin_left = 832.0
margin_top = 32.0
margin_right = 1184.0
margin_bottom = 64.0
theme = ExtResource( 11 )
min_value = 50.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider2" type="HSlider" parent="."]
margin_left = 832.0
margin_top = 64.0
margin_right = 1184.0
margin_bottom = 96.0
theme = ExtResource( 11 )
min_value = 50.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msuic" type="Label" parent="."]
margin_left = 704.0
margin_top = 64.0
margin_right = 828.0
margin_bottom = 105.0
custom_fonts/font = SubResource( 16 )
text = "Music: "
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msuic2" type="Label" parent="."]
margin_left = 704.0
margin_top = 32.0
margin_right = 828.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 16 )
text = "Sounds:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer" type="Button" parent="."]
visible = false
margin_left = 2240.0
margin_top = 224.0
margin_right = 2560.0
margin_bottom = 288.0
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cosm" type="Button" parent="."]
visible = false
margin_left = 2240.0
margin_top = 320.0
margin_right = 2464.0
margin_bottom = 384.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 17 )
text = "Cosmetics"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -192.0
margin_right = 2301.0
margin_bottom = 1088.0
mouse_filter = 2
mouse_default_cursor_shape = 3
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="streetus" type="AnimatedSprite" parent="TextureRect"]
light_mask = 2
material = SubResource( 18 )
position = Vector2( 1085, 736 )
scale = Vector2( 17.5, 22 )
frames = ExtResource( 4 )
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="Node2D" type="Node2D" parent="."]

[node name="Perks" type="Button" parent="."]
margin_left = 1472.0
margin_top = 352.0
margin_right = 1856.0
margin_bottom = 416.0
theme = ExtResource( 8 )
text = "PERKS & ABILITIES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="Sprite" parent="."]
texture = ExtResource( 7 )

[node name="sleepuwu" type="AnimatedSprite" parent="."]
position = Vector2( 864, 864 )
scale = Vector2( 19.75, 18.75 )
frames = SubResource( 19 )
animation = "awake"
frame = 1
playing = true

[node name="Tree1" type="AnimatedSprite" parent="."]
position = Vector2( 160, 576 )
scale = Vector2( 21.25, 20.25 )
frames = SubResource( 20 )
frame = 1
playing = true

[node name="Tree2" type="AnimatedSprite" parent="."]
position = Vector2( 1472, 608 )
scale = Vector2( 17.4062, 17.5312 )
frames = SubResource( 20 )
frame = 1
playing = true

[node name="DeleteGame" type="Button" parent="."]
visible = false
margin_left = 832.0
margin_top = 480.0
margin_right = 1180.0
margin_bottom = 528.0
theme = ExtResource( 8 )
text = "Delete Save Data"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Debug" type="Button" parent="."]
visible = false
margin_left = 832.0
margin_top = 552.0
margin_right = 1180.0
margin_bottom = 600.0
theme = ExtResource( 8 )
text = "Debug"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="EXIT" to="." method="_on_EXIT_pressed"]
[connection signal="pressed" from="Fullscreen" to="." method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Research" to="." method="_on_Research_pressed"]
[connection signal="pressed" from="RP 50" to="." method="_on_RP_50_pressed"]
[connection signal="pressed" from="LP 50" to="." method="_on_LP_50_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="pressed" from="Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="Cosm" to="." method="_on_Cosm_pressed"]
[connection signal="pressed" from="Perks" to="." method="_on_Perks_pressed"]
[connection signal="pressed" from="DeleteGame" to="." method="_on_DeleteGame_pressed"]
[connection signal="pressed" from="Debug" to="." method="_on_Debug_pressed"]
